--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
     <link rel="stylesheet" href="/cssreset.css">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>天方夜谈论坛</title>
   </head>
   <body>
     <noscript>
